project section bug fixed
The issue occurred when the project section's height, defined in viewport height units (vh), constrained the available space for the content. As a result, when the content exceeded the allocated space, it overflowed onto the contact page, disrupting the overall page layout. This problem stems from the use of vh units inappropriately, limiting the project section's capacity to accommodate additional content.

--- a/style.css
+++ b/style.css
@@ -339,6 +339,7 @@ article.icon{
 
 #projects {
     position: relative;
+    height: fit-content;
 }
   
 .color-container {
